--- a/nixos/tmux/tmux.conf
+++ b/nixos/tmux/tmux.conf
@@ -1,5 +1,5 @@
 # Enable mouse mode (tmux 2.1 and above)
-set -g mouse on
+# set -g mouse on
 
 # autmatic window name
 setw -g automatic-rename on
@@ -11,10 +11,10 @@ set -g status-interval 60
 set -g focus-events on
 
 # truecolor in xterm
-set -ga terminal-overrides ",*col*:Tc"
+# set -ga terminal-overrides ",*col*:Tc"
 
 # Start a non login shell
-set -g default-command "${SHELL}"
+# set -g default-command "${SHELL}"
 
 # pane movement
 
@@ -24,9 +24,9 @@ bind-key j command-prompt -p "join pane from:"  "join-pane -s '%%'"
 bind-key s command-prompt -p "send pane to:"  "join-pane -t '%%'"
 
 # Key binds
-bind -n ^_ send-keys 'C-l'
-bind-key -r C-h select-window -t :-
-bind-key -r C-l select-window -t :+
+#bind -n ^_ send-keys 'C-l'
+#bind-key -r C-h select-window -t :-
+#bind-key -r C-l select-window -t :+
 bind-key C-a    last-window
 bind-key |      split-window -h
 bind-key -      split-window -v
