--- a/nixos/tmux/tmux.conf
+++ b/nixos/tmux/tmux.conf
@@ -1,5 +1,5 @@
 # Enable mouse mode (tmux 2.1 and above)
-set -g mouse on
+# set -g mouse on
 
 # autmatic window name
 setw -g automatic-rename on
@@ -11,10 +11,10 @@ set -g status-interval 60
 set -g focus-events on
 
 # truecolor in xterm
-set -ga terminal-overrides ",*col*:Tc"
+# set -ga terminal-overrides ",*col*:Tc"
 
 # Start a non login shell
-set -g default-command "${SHELL}"
+# set -g default-command "${SHELL}"
 
 # pane movement
 
