--- a/nixos/tmux/tmux.conf
+++ b/nixos/tmux/tmux.conf
@@ -24,9 +24,9 @@ bind-key j command-prompt -p "join pane from:"  "join-pane -s '%%'"
 bind-key s command-prompt -p "send pane to:"  "join-pane -t '%%'"
 
 # Key binds
-#bind -n ^_ send-keys 'C-l'
-#bind-key -r C-h select-window -t :-
-#bind-key -r C-l select-window -t :+
+bind -n ^_ send-keys 'C-l'
+bind-key -r C-h select-window -t :-
+bind-key -r C-l select-window -t :+
 bind-key C-a    last-window
 bind-key |      split-window -h
 bind-key -      split-window -v
